# osu-syncflow

./: .gitignore  Cargo.toml  Makefile  README.md  main.py  pyproject.toml
assets/: wip_template.json
models/: __init__.py  hit_object.py  osu_data_frame.py  timing_point.py
src/: audio_io.py  cnn.py  file.rs  lib.rs  main.py  main.rs  parser.rs
src/osu_syncflow/: __init__.py  parser.py
src/osu_syncflow/beatmap/: __init__.py  beatmap.py  hit_object.py  timing_point.py
src/osu_syncflow/file/: read.py
tests/: conftest.py  io.rs  test_file.py  test_parser.py  test_test_data.py
utils/: data_parser.py  file_parser.py  line_parser.py
