[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osu_syncflow"
version = "0.1.0"
requires-python = ">=3.10"
description = "AI beatmap generation and analysis for osu!"
authors = [{ name = "Keagen Talsma", email = "keegenjt@gmail.com" }]

dependencies = [
    # Add your runtime dependencies here, e.g.
    "librosa",
    "numpy",
    "pandas"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
